[workspace]
members = ["megaten_battle_sim"]

[package]
name = "megaten-rogue"
version = "0.1.0"
edition = "2021"

[dependencies]
bon = "2.3.0"
console_error_panic_hook = "0.1.7"
env_logger = "0.11.5"
lazy_static = "1.5.0"
leptos = { version = "0.6.15", features = ["csr", "nightly"] }
log = "0.4.22"
